# ghost-resource-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ghost_tracker.spec  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ghost_tracker/: __init__.py  cli.py  core.py  dashboard.py  menubar.py
tests/: test_core.py
