[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-resource-tracker"
version = "1.0.0"
description = "Power-to-process security monitor — detect hidden cryptominers and malware on macOS"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ghost Tracker Contributors" }]
keywords = ["security", "monitoring", "malware", "cryptomining", "macOS", "power", "RAPL"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "rich>=13.7",
]

[project.scripts]
ghost-tracker = "ghost_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ghost-resource-tracker"
Issues   = "https://github.com/YOUR_USERNAME/ghost-resource-tracker/issues"
Documentation = "https://github.com/YOUR_USERNAME/ghost-resource-tracker#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost_tracker*"]
